Fix shelf positioning in Unified Desktop mode

This CL changes the default behavior from always
placing the shelf on the top-left display in the
unified matrix, to placing it according to its
aligment:
- "left" alignment -> top-left display in the matrix.
- "right" alignment -> top-right display in the matrix.
- "bottom" alignment -> bottom-left display in the matrix.

This CL also fixes the shelf positioning when changing the
unified display zoom (the unified scale factor was not taken
into consideration).

BUG=897771
TEST=Modified tests.

Change-Id: Idf7a364ce40340e69a1dbb8785318725ea1aa890
Reviewed-on: https://chromium-review.googlesource.com/c/1315711
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Ahmed Fakhry <afakhry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605765}