ui/display/unified_desktop_utils.h
@@ -13,6 +13,13 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace display {
 
+// Defines a display position in the unified display matrix.
+enum class DisplayPositionInUnifiedMatrix {
+  kTopLeft,
+  kTopRight,
+  kBottomLeft,
+};
+
 // Type of the matrix that represents the display layout in Unified Desktop
 // mode. The ID of a display is placed in a cell in the matrix where that
 // display is desired to be placed in the actual layout.
