ash/screen_util_unittest.cc
@@ -4,6 +4,8 @@
 
 #include "ash/screen_util.h"
 
+#include "ash/root_window_controller.h"
+#include "ash/shelf/shelf.h"
 #include "ash/shelf/shelf_constants.h"
 #include "ash/shell.h"
 #include "ash/test/ash_test_base.h"
@@ -158,14 +160,40 @@ TEST_F(ScreenUtilTest, ShelfDisplayBoundsInUnifiedDesktopGrid) {
   display::Screen* screen = display::Screen::GetScreen();
   EXPECT_EQ(gfx::Size(766, 1254), screen->GetPrimaryDisplay().size());
 
-  // Regardless of where the window is, the shelf is always in the top left
-  // display in the matrix.
-  EXPECT_EQ(gfx::Rect(0, 0, 499, 400),
+  Shelf* shelf = Shell::GetPrimaryRootWindowController()->shelf();
+  EXPECT_EQ(shelf->alignment(), SHELF_ALIGNMENT_BOTTOM);
+
+  // Regardless of where the window is, the shelf with a bottom alignment is
+  // always in the bottom left display in the matrix.
+  EXPECT_EQ(gfx::Rect(0, 1057, 593, 198),
             screen_util::GetDisplayBoundsWithShelf(window));
 
   // Move to the bottom right display.
   widget->SetBounds(gfx::Rect(620, 940, 100, 100));
+  EXPECT_EQ(gfx::Rect(0, 1057, 593, 198),
+            screen_util::GetDisplayBoundsWithShelf(window));
+
+  // Change the shelf alignment to left, and expect that it now resides in the
+  // top left display in the matrix.
+  shelf->SetAlignment(SHELF_ALIGNMENT_LEFT);
   EXPECT_EQ(gfx::Rect(0, 0, 499, 400),
+            screen_util::GetDisplayBoundsWithShelf(window));
+
+  // Change the shelf alignment to right, and expect that it now resides in the
+  // top right display in the matrix.
+  shelf->SetAlignment(SHELF_ALIGNMENT_RIGHT);
+  EXPECT_EQ(gfx::Rect(499, 0, 267, 400),
+            screen_util::GetDisplayBoundsWithShelf(window));
+
+  // Change alignment back to bottom and change the unified display zoom factor.
+  // Expect that the display with shelf bounds will take into account the zoom
+  // factor.
+  shelf->SetAlignment(SHELF_ALIGNMENT_BOTTOM);
+  display_manager()->UpdateZoomFactor(display::kUnifiedDisplayId, 3.f);
+  const display::Display unified_display =
+      display_manager()->GetDisplayForId(display::kUnifiedDisplayId);
+  EXPECT_FLOAT_EQ(unified_display.device_scale_factor(), 3.f);
+  EXPECT_EQ(gfx::Rect(0, 352, 198, 67),
             screen_util::GetDisplayBoundsWithShelf(window));
 }
 
